Resolved scroll bar issue,message alignment issue,view document discussion issue

--- a/src/pages/staging-zone/discussion-details/discussion-details.css
+++ b/src/pages/staging-zone/discussion-details/discussion-details.css
@@ -45,6 +45,7 @@
   font: normal normal normal 16px/21px Inter;
   padding: 11px 12px 12px 22px;
   border-radius: 8px 0px 8px 8px;
+  width: 100%;
 }
 
 .otherUserMsg {
